@@ -8,6 +8,9 @@
  * newdec: New operation for explicit promotion of bare intervals into
    decorated intervals (without warning).
 
+ * setdec: New operation for explicit assembling of decorated intervals
+   (the function implicitly fixes forbidden decorations without warning).
+
  * hull: In contrast to the union function, the interval constructor is no
    longer considered a set operation and can create intervals with a
    non-trivial decoration.
